--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ python-dotenv = "^1.0.0"
 uvicorn = "^0.24.0.post1"
 aiomysql = "^0.2.0"
 cryptography = "^41.0.7"
+mypy = "^1.7.1"
+pylint = "^3.0.3"
 
 [build-system]
 requires = ["poetry-core"]
