feat: add auth module

--- a/config/.env.example
+++ b/config/.env.example
@@ -4,3 +4,8 @@ DB_PASSWORD=enter-variable
 DB_HOST=enter-variable
 DB_PORT=enter-variable
 DB_NAME=enter-variable
+
+SECRET_KEY=enter-variable
+REFRESH_TOKEN_SECRET_KEY=enter-variable
+ALGORITHM=enter-variable
+ACCESS_TOKEN_EXPIRE_MINUTES=enter-variable
