--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ aiomysql = "^0.2.0"
 cryptography = "^41.0.7"
 mypy = "^1.7.1"
 pylint = "^3.0.3"
+passlib = "^1.7.4"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+python-multipart = "^0.0.6"
+bcrypt = "^4.1.1"
 
 [build-system]
 requires = ["poetry-core"]
