--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ passlib = "^1.7.4"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 python-multipart = "^0.0.6"
 bcrypt = "^4.1.1"
+pytest-asyncio = "^0.23.2"
+httpx = "^0.25.2"
 
 [build-system]
 requires = ["poetry-core"]
