fix(user): fix github action

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Integration tests
         run:
-          pytest
+          poetry run pytest
 
       - name: Install poetry
         run:
