fix(user): fix github action

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Integration tests
         run:
-          pytest
+          poetry run pytest
 
       - name: Mypy type checking
         run:
