--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -36,6 +36,10 @@ jobs:
         run:
           poetry install
 
+      - name: Integration tests
+        run:
+          poetry run pytest
+
       - name: Mypy type checking
         run:
           poetry run mypy .
