test(wallet): add .env config file copy

--- a/config/.env.example
+++ b/config/.env.example
@@ -5,7 +5,7 @@ DB_HOST=enter-variable
 DB_PORT=enter-variable
 DB_NAME=enter-variable
 
-SECRET_KEY=enter-variable
-REFRESH_TOKEN_SECRET_KEY=enter-variable
-ALGORITHM=enter-variable
-ACCESS_TOKEN_EXPIRE_MINUTES=enter-variable
+SECRET_KEY=test-secret-key
+REFRESH_TOKEN_SECRET_KEY=test-refresh-secret-key
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
