--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -36,6 +36,10 @@ jobs:
         run:
           poetry install
 
+      - name: Copy .env test variables
+        run:
+          poetry run python3 tools/copy_env.py
+
       - name: Integration tests
         run:
           poetry run pytest
