--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ python-multipart = "^0.0.6"
 bcrypt = "^4.1.1"
 pytest-asyncio = "^0.23.2"
 httpx = "^0.25.2"
+alembic = "^1.13.0"
 
 [build-system]
 requires = ["poetry-core"]
