--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ bcrypt = "^4.1.1"
 pytest-asyncio = "^0.23.2"
 httpx = "^0.25.2"
 alembic = "^1.13.0"
+python-dateutil = "^2.8.2"
+types-python-dateutil = "^2.8.19.20240106"
 
 [build-system]
 requires = ["poetry-core"]
